--- a/_config.yml
+++ b/_config.yml
@@ -82,11 +82,11 @@ JB :
   comments :
     provider : disqus
     disqus :
-      short_name : jekyllbootstrap
+      short_name : henkerikvanderhoek
     livefyre :
       site_id : 123
     intensedebate :
-      account : 123abc
+      account : henkerikvanderhoek
     facebook :
       appid : 123
       num_posts: 5
