--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,8 @@ pygments: true
 #
 title : Henk Erik van der Hoek
 tagline: Site Tagline
+paginate: 1
+paginate_path: "page:num"
 author :
   name : Henk Erik van der Hoek
 #  email : blah@email.test
